--- a/desktop/data/defaults/luminaDesktop.conf
+++ b/desktop/data/defaults/luminaDesktop.conf
@@ -24,32 +24,32 @@ session_playlogoutaudio=true #[true/false] Play the audio chimes on log out
 # Provide the full path to *.desktop file, or a binary name which exists on PATH
 # *.desktop files provide better support for input formats, and are recommended
 #Note: the last "ifexists" entry has the highest priority for each session utility
-session_default_terminal_ifexists=qterminal.desktop
-session_default_terminal_ifexists=lumina-terminal.desktop
-session_default_terminal_ifexists=xterm.desktop
-session_default_filemanager_ifexists=lumina-fm.desktop
-session_default_webbrowser_ifexists=chromium-browser.desktop
-session_default_webbrowser_ifexists=firefox.desktop
-session_default_webbrowser_ifexists=org.kde.falkon.desktop
-session_default_email_ifexists=trojita.desktop
+#session_default_terminal_ifexists=qterminal.desktop
+#session_default_terminal_ifexists=lumina-terminal.desktop
+#session_default_terminal_ifexists=xterm.desktop
+#session_default_filemanager_ifexists=lumina-fm.desktop
+#session_default_webbrowser_ifexists=chromium-browser.desktop
+#session_default_webbrowser_ifexists=firefox.desktop
+#session_default_webbrowser_ifexists=org.kde.falkon.desktop
+#session_default_email_ifexists=trojita.desktop
 
 #DEFAULT UTILITIES FOR INDIVIDUAL MIME TYPES
 # Format: mime_default_<mimetype>[_ifexists]=<*.desktop file>
 #mime_default_text/*_ifexists=lumina-textedit.desktop
-mime_default_audio/*_ifexists=vlc.desktop
-mime_default_video/*_ifexists=vlc.desktop
-mime_default_image/*_ifexists=phototonic.desktop
-mime_default_unknown/*_ifexists=lumina-textedit.desktop
-mime_default_application/x-shellscript_ifexists=lumina-textedit.desktop
-mime_default_application/pdf_ifexists=okular.desktop
-mime_default_application/pdf_ifexists=lumina-pdf.desktop
-mime_default_application/zip_ifexists=lumina-archiver.desktop
-mime_default_application/x-compressed-tar_ifexists=lumina-archiver.desktop
-mime_default_application/x-bzip-compressed-tar_ifexists=lumina-archiver.desktop
-mime_default_application/x-lrzip-compressed-tar_ifexists=lumina-archiver.desktop
-mime_default_application/x-lzma-compressed-tar_ifexists=lumina-archiver.desktop
-mime_default_application/x-xz-compressed-tar_ifexists=lumina-archiver.desktop
-mime_default_application/x-tar_ifexists=lumina-archiver.desktop
+#mime_default_audio/*_ifexists=vlc.desktop
+#mime_default_video/*_ifexists=vlc.desktop
+#mime_default_image/*_ifexists=phototonic.desktop
+#mime_default_unknown/*_ifexists=lumina-textedit.desktop
+#mime_default_application/x-shellscript_ifexists=lumina-textedit.desktop
+#mime_default_application/pdf_ifexists=okular.desktop
+#mime_default_application/pdf_ifexists=lumina-pdf.desktop
+#mime_default_application/zip_ifexists=lumina-archiver.desktop
+#mime_default_application/x-compressed-tar_ifexists=lumina-archiver.desktop
+#mime_default_application/x-bzip-compressed-tar_ifexists=lumina-archiver.desktop
+#mime_default_application/x-lrzip-compressed-tar_ifexists=lumina-archiver.desktop
+#mime_default_application/x-lzma-compressed-tar_ifexists=lumina-archiver.desktop
+#mime_default_application/x-xz-compressed-tar_ifexists=lumina-archiver.desktop
+#mime_default_application/x-tar_ifexists=lumina-archiver.desktop
 
 #THEME SETTINGS
 #theme_fluxbox=lumina-dark #Name of the WM theme to use
