--- a/desktop/data/defaults/luminaDesktop.conf
+++ b/desktop/data/defaults/luminaDesktop.conf
@@ -62,7 +62,7 @@ theme_fontsize=10pt #Default size of the fonts to use on the desktop (can also u
 
 #DESKTOP SETTINGS (used for the primary screen in multi-screen setups)
 desktop_visiblepanels=1 #[0 - 12] The number of panels visible by default
-desktop_backgroundfiles=default
+desktop_backgroundfiles=/usr/share/backgrounds/gnome/dune-d.svg
 desktop_backgroundrotateminutes=5 #[positive integer] number of minutes between background rotations (if multiple files)
 #desktop_plugins= #list of plugins to be shown on the desktop by default
 desktop_generate_icons=true #[true/false] Auto-generate launchers for ~/Desktop items
