--- a/sddm-halawa/PKGBUILD
+++ b/sddm-halawa/PKGBUILD
@@ -3,7 +3,7 @@ pkgver=1.0
 pkgrel=0
 pkgdesc="SDDM theme, simplified (forked from sddm-sugar-candy"
 arch=("any")
-depends=("sddm" "qt5-quickcontrols")
+depends=("sddm" "qt5-quickcontrols2")
 package() {
 	mkdir -p "$pkgdir"/usr/share/sddm/themes/
 	cp -r ../halawa "$pkgdir"/usr/share/sddm/themes/	
