add application style configuration

--- a/desktop/data/defaults/luminaDesktop.conf
+++ b/desktop/data/defaults/luminaDesktop.conf
@@ -10,6 +10,7 @@ session_dateformat=yyyy/MM/dd
 session_shutdowncmd=shutdown -P -h now
 session_restartcmd=shutdown -r now
 session_lockcmd=xsecurelock
+session_applicationstyle=Fusion
 
 #DESKTOP SETTINGS (used for the primary screen in multi-screen setups)
 desktop_visiblepanels=1 #[0 - 12] The number of panels visible by default
