--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -56,7 +56,7 @@ target_link_libraries(
 install(TARGETS
 	${PROJECT}
 	DESTINATION "${CMAKE_INSTALL_LIBDIR}"
-	EXPORT FindLumina
+	EXPORT Find7b7b
 	LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
 	COMPONENT Runtime
 )
@@ -67,4 +67,4 @@ install(FILES
     COMPONENT Devel
 )
 
-install(EXPORT FindLumina DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT}")
+install(EXPORT Find7b7b DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT}")
