--- a/open/pkg/PKGBUILD
+++ b/open/pkg/PKGBUILD
@@ -1,12 +1,12 @@
-pkgname=lumina-open
-pkgver=1.7
+pkgname=7b7b-open
+pkgver=1.0
 pkgrel=0
-pkgdesc="The desktop"
+pkgdesc="XDG-open frontend"
 arch=("x86_64")
 license=("BSD")
 makedepends=("cmake")
 depends=(
- "liblumina"
+ "lib7b7b"
  "qt6-base"
 )
 
