--- a/config/pkg/PKGBUILD
+++ b/config/pkg/PKGBUILD
@@ -1,12 +1,12 @@
-pkgname=lumina-config
-pkgver=1.7
+pkgname=7b7b-config
+pkgver=1.0
 pkgrel=0
-pkgdesc="The desktop"
+pkgdesc="The desktop settings"
 arch=("x86_64")
 license=("BSD")
 makedepends=("cmake")
 depends=(
- "liblumina"
+ "lib7b7b"
  "qt6-base"
 )
 
