--- a/desktop/pkg/PKGBUILD
+++ b/desktop/pkg/PKGBUILD
@@ -1,12 +1,12 @@
-pkgname=lumina-desktop
-pkgver=1.7
+pkgname=7b7b-desktop
+pkgver=1.0
 pkgrel=0
 pkgdesc="The desktop"
 arch=("x86_64")
 license=("BSD")
 makedepends=("cmake")
 depends=(
- "liblumina"
+ "lib7b7b"
  "qt6-base"
  "qt6-svg"
 )
@@ -22,5 +22,5 @@ build() {
 package() {
 	cd build
 	make DESTDIR="$pkgdir" install
-	chmod +x "${pkgdir}/usr/bin/start-lumina-desktop"
+	chmod +x "${pkgdir}/usr/bin/start-7b7b-desktop"
 }
