--- a/lib/pkg/PKGBUILD
+++ b/lib/pkg/PKGBUILD
@@ -1,7 +1,7 @@
-pkgname=liblumina
-pkgver=1.7
+pkgname=lib7b7b
+pkgver=1.0
 pkgrel=0
-pkgdesc="The desktop"
+pkgdesc="The library for the 7b7b desktop"
 arch=("x86_64")
 license=("BSD")
 makedepends=("cmake")
