--- a/open/pkg/PKGBUILD
+++ b/open/pkg/PKGBUILD
@@ -13,7 +13,7 @@ depends=(
 build() {
 	mkdir -p build
 	cd build
-	cmake ../../../ -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_DATADIR=share
+	cmake ../../../ -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_INSTALL_DATADIR=share -DCMAKE_INSTALL_LIBDIR=lib
 	make
 }
 
